# SnakeGame

./: CMakeLists.txt  README.md
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
res/: grid_obj.frag  grid_obj.geom  grid_obj.vert
src/: EventManager.h  Grid.cpp  Grid.h  Quad.h  QuadRenderer.cpp  QuadRenderer.h  ShaderLoading.h  Shaders.cpp  Shaders.h  Window.cpp  Window.h  main.cpp
src/core/: EventManager.cpp  EventManager.h  Timer.hpp  Window.cpp  Window.h
src/core/commands/: MoveSnakeCommand.h  SpeedUpSnakeCommand.h  TimedCommand.h
src/game_objects/: Apple.hpp  Grid.cpp  Grid.h  Observer.h  Snake.cpp  Snake.h  Subject.h
src/graphics/: Quad.h  QuadRenderer.cpp  QuadRenderer.h  Renderable.h
src/graphics/shaders/: ShaderLoading.cpp  ShaderProgram.cpp  ShaderProgram.h  shaders.h
src/kuso/: vec.cpp  vec.h
